@ Fix web portal sign-in page jittering on mobile when typing password. @

--- a/Applications/WebPortal/WebApp/resources/index.css
+++ b/Applications/WebPortal/WebApp/resources/index.css
@@ -26,13 +26,15 @@
   font-weight: 300;
 }
 
-#main {
-  background-color: #ffffff;
+html, body {
   margin: 0;
   padding: 0;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
   height: 100dvh;
+  overflow: hidden;
+}
+
+#main {
+  background-color: #ffffff;
+  height: 100%;
+  overflow: hidden;
 }
